[project]
name = "led-matrix-zmq-http-bridge"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "led-matrix-zmq>=1.0.0",
    "pydantic-settings>=2.6.1",
    "zeroconf>=0.136.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[tool.mypy]
strict = true
